--- a/_index.html
+++ b/_index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://pupis.github.io/docs/index.html#/" />  </head>
+    <title>pupis.github.io</title>
+  </head>
   <body>
+    <div id="app"></div>
+    <!-- built files will be auto injected -->
+  </body>
 </html>
