--- a/index.html
+++ b/index.html
@@ -3,6 +3,6 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
-    <meta http-equiv="refresh" content="0; url=https://pupis.github.io/docs/index.html#/" />  </head>
-  <body>
+    <meta http-equiv="refresh" content="0; url=https://pupis.github.io/docs/index.html#/" />
+  </head>
 </html>
